Pokémon Discord Invite Link aktualisiert

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/TanjunBot/Tanjun-Dokumentation/discussions
     about: Hier findest du eine erste Anlaufstelle, um Fragen zu stellen und Probleme zu lösen.
   - name: Tanjun Discord Supportserver
-    url: https://r.arion2000.xyz/discord/pokemon/invite/vanity
+    url: https://discord.arion2000.xyz/api/discord
     about: Auf unserem Discord Server kannst du Fragen stellen und dich mit anderen austauschen.
