--- a/.github/ISSUE_TEMPLATE/fehler-melden.yml
+++ b/.github/ISSUE_TEMPLATE/fehler-melden.yml
@@ -40,7 +40,7 @@ body:
 - type: textarea
   id: repro
   attributes:
-    label: (Falls zutreffend: Fehler reproduzieren)
+    label: "(Falls zutreffend: Fehler reproduzieren)"
     description: "Was muss man tun, um den Fehler zu reproduzieren?"
     value: |
       1.
