--- a/.github/ISSUE_TEMPLATE/fehler-melden.yml
+++ b/.github/ISSUE_TEMPLATE/fehler-melden.yml
@@ -1,7 +1,7 @@
 name: Fehler melden
 description: Hilf mit, diese Dokumentation zu verbessern!
 labels: bug
-assignees: ''
+assignees: ""
 body:
 - type: textarea
   id: description
