--- a/.github/ISSUE_TEMPLATE/fehler-melden.yml
+++ b/.github/ISSUE_TEMPLATE/fehler-melden.yml
@@ -63,7 +63,8 @@ body:
     
 - type: markdown
   attributes:
-    value: "# Systeminformationen"
+    value: |
+      ## Systeminformationen
     
 - type: input
   id: os
