--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/stale@v9.0.0
         with:
-          stale-pr-message: 'Diese Pull Request wurde als inaktiv markiert, weil sie seit 30 Tagen offen ist und keine Aktivität aufweist. Entfernen das "Veraltet"-Label oder diesen Kommentar, sonst wird diese Pull Request in 5 Tagen geschlossen.'
+          stale-pr-message: 'Diese Pull Request wurde als inaktiv markiert, weil sie seit 30 Tagen offen ist und keine Aktivität aufweist. Entferne das "Veraltet"-Label oder diesen Kommentar, sonst wird diese Pull Request in 5 Tagen geschlossen.'
           close-pr-message: 'Diese Pull Request wurde geschlossen, weil sie seit 5 Tagen keine Aktivität aufweist.'
           stale-issue-message: 'Dieses Issue wurde als inaktiv markiert, weil es seit 30 Tagen offen ist und keine Aktivität aufweist. Entferne das "Veraltet"-Label oder diesen Kommentar, sonst wird dieses Issue in 5 Tagen geschlossen.'
           close-issue-message: 'Dieses Issue wurde geschlossen, weil es seit 5 Tagen keine Aktivität aufweist.'
