--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,4 +7,4 @@ files:
       - CODE_OF_CONDUCT.md
       - LICENSE
       - translations/
-    translation: translations/%three_letters_code%/%original_path%/%original_file_name%
+    translation: '%original_path%/%original_file_name%'
