--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -19,7 +19,7 @@ jobs:
           close-issue-message: 'Dieses Issue wurde geschlossen, weil es seit 5 Tagen keine Aktivität aufweist.'
           days-before-stale: 30
           days-before-close: 5
-          exempt-issue-labels: ''
+          exempt-issue-labels: 'Renovate'
           exempt-pr-labels: 'Hilfe gesucht'
           exempt-all-milestones: true
           operations-per-run: 100
